--- a/app/views/layouts/application/cliq_bar/_account.html.haml
+++ b/app/views/layouts/application/cliq_bar/_account.html.haml
@@ -1,7 +1,10 @@
 -if user_signed_in?
   %li
     = link_to edit_user_registration_path do
-      =current_user.username.capitalize
+      -if current_user.username?
+        =current_user.username.capitalize
+      -else
+        Create a Username
       %i.fa.fa-caret-down
   - if current_user.admin?
     %li= link_to "Admin", admin_path
