--- a/app/views/topics/_top_settings.html.haml
+++ b/app/views/topics/_top_settings.html.haml
@@ -5,6 +5,7 @@
   %ul.dropdown-menu{role:'menu'}
     %li
       = link_to "Report"
-    -if current_user.id == topicreply.user_id
-      %li
-        =link_to "Edit", edit_topic_reply_path(@topic, topicreply)
+    -if current_user
+      -if current_user.id == topicreply.user_id
+        %li
+          =link_to "Edit", edit_topic_reply_path(@topic, topicreply)
