--- a/app/views/layouts/application/cliq_bar/_cliq_brand.html.haml
+++ b/app/views/layouts/application/cliq_bar/_cliq_brand.html.haml
@@ -1,13 +1,8 @@
-%button{type:'button', class:'navbar-toggle',data_toggle:'collapse',data_target:'#navbar-collapse-1'}
+%button.navbar-toggle.collapsed{"data-target" => "#bs-example-navbar-collapse-1", "data-toggle" => "collapse", :type => "button"}
   %span.sr-only
     Toggle navigation
   %span.icon-bar
   %span.icon-bar
   %span.icon-bar
 %ul.nav.navbar-nav
-  %li.dropdown
-    %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-      %span.cliq-banner Cliq
-      %span.caret
-    %ul.dropdown-menu{role:'menu'}
-      %li=link_to 'Cliq', cliqs_path
+  %li=link_to 'Cliq', cliqs_path, class:'navbar-brand'
