--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,12 +19,14 @@
     %link{href:"//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css", rel:"stylesheet"}
 
     = yield :head
-
     %body
       .cliq_bar
         #fb-root
         = render "layouts/application/cliq_bar"
       .container
+        -if current_user
+          -current_user.badges.each do |badge|
+            %li=badge.name
         .row
           .col-lg-12.col-md-12.col-sm-12
             = bootstrap_flash
