--- a/app/views/cliqs/_cliq_body.html.haml
+++ b/app/views/cliqs/_cliq_body.html.haml
@@ -1,4 +1,5 @@
 =render "cliqs/cliq_body/search_results", search: @search ||= {}
 =render "cliqs/cliq_body/info_bar"
 -unless @search.has_key?('temp')
- =render "cliqs/cliq_body/topic_list", topics: @topics
+  .panel
+    =render "cliqs/cliq_body/topic_list", topics: @topics
