--- a/app/views/cliqs/cliq_body/_info_bar.html.haml
+++ b/app/views/cliqs/cliq_body/_info_bar.html.haml
@@ -1,5 +1,5 @@
 .clearfix
-  %nav.navbar
+  %nav.navbar.filter-list
     %ul.nav.navbar-nav
       =render "cliqs/cliq_body/filter_list"
     %ul.nav.navbar-right
