--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -5,3 +5,15 @@
   To use Glyphicons sprites instead of Font Awesome, replace with "require twitter-bootstrap-static/sprites"
   =require twitter-bootstrap-static/fontawesome
   */
+
+body {
+    background-color: #538d8b;
+}
+
+.table-striped > tbody > tr:nth-child(even) > td{
+    background-color: white;
+}
+
+table {
+    background-color: white;
+}
