--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,9 +24,11 @@
         #fb-root
         = render "layouts/application/cliq_bar"
       .container
-        -if current_user
-          -current_user.badges.each do |badge|
-            %li=badge.name
+        .temp-badge
+          %h5 temp badge area:
+          -if current_user
+            -current_user.badges.each do |badge|
+              %li=badge.name
         .row
           .col-lg-12.col-md-12.col-sm-12
             = bootstrap_flash
