--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,7 +70,7 @@ ul {
 }
 
 .filter-list {
-    background-color:white;
+    background-color:#e7e7e7;
   .new-thread{
     padding-right: 6px;
     padding-top: 4px;
@@ -79,5 +79,5 @@ ul {
 
 .topics-border {
   padding: 5px;
-  background-color: white;
+  background-color: #e7e7e7;
 }
