--- a/app/assets/stylesheets/cliqs.scss
+++ b/app/assets/stylesheets/cliqs.scss
@@ -6,3 +6,32 @@
 .cliq-active {
   color:white;
 }
+
+.similar-searches {
+  padding: 10px;
+  overflow:hidden;
+}
+
+.create-new-cliq {
+  padding: 10px;
+}
+
+.cliq {
+  a{
+    color: #4b4b4b;
+    text-decoration: none;
+    font-size: 18px!important;
+    padding-left: 10px!important;
+  }
+  .cliq-color {
+    margin-top:5px;
+    float:left;
+    width: 15px;
+    height: 15px;
+  }
+}
+
+.category-list {
+  padding-top: 10px;
+  padding-left: 10px!important;
+}
