--- a/app/views/topics/_topic.html.haml
+++ b/app/views/topics/_topic.html.haml
@@ -4,7 +4,7 @@
   %td
     =topic.exp
   %td
-    =render "shared/cliq", desc: topic.cliq
+    =render "shared/cliq", cliq: topic.cliq
   -if @admin
     %td
       =topic.reports
