--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,8 @@ ul {
     display: inline;
 }
 .create-new-cliq .carrot {
-    padding-right: 10px;
+    padding-right: 5px;
+    padding-left: 5px;
 }
 .carrot-box {
     padding: 5px;
@@ -64,12 +65,6 @@ ul {
     border-radius: .25em;
 }
 
-.category-list {
-    float:left;
-    padding-left: 10px!important;
-    padding-bottom: 10px;
-}
-
 .filter-list {
     background-color:#f8f8f8;
   .new-thread{
@@ -89,7 +84,15 @@ ul {
   padding: 10px 10px 10px 15px;
 }
 
-.pagination-container
-{
+.pagination-container {
   padding-left: 15px;
+}
+
+.search-container {
+  width: 40%;
+  min-width: 230px;
+}
+
+.nav-input {
+  padding-top: 8px!important;
 }
