--- a/app/views/layouts/application/cliq_bar/_account.html.haml
+++ b/app/views/layouts/application/cliq_bar/_account.html.haml
@@ -1,15 +1,17 @@
 -if user_signed_in?
-  %li
-    = link_to edit_user_registration_path do
+  %li.dropdown
+    %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
       -if current_user.username?
         =current_user.username.capitalize
       -else
         Create a Username
-      %i.fa.fa-caret-down
-  - if can? :manage, @all
-    %li= link_to "Admin", admin_path
+      %span.caret
+    %ul.dropdown-menu{role:"menu"}
+      %li= link_to "Edit", edit_user_registration_path
+      %li= link_to "Sign out", destroy_user_session_path
+      - if can? :manage, @all
+        %li= link_to "Admin", admin_path
   %li= image_tag(facebook_image(current_user.uid))
-  %li= link_to "Sign out", destroy_user_session_path
 -else
   %li= link_to "Sign up", new_user_registration_path
   %li= link_to "Sign in", new_user_session_path
