--- a/app/views/layouts/application/cliq_bar/_cliq_search.html.haml
+++ b/app/views/layouts/application/cliq_bar/_cliq_search.html.haml
@@ -1,8 +1,31 @@
-%li
-  = form_tag cliq_path(@cliq), method:'get',class:'navbar-form navbar-left input-append' do
-    .form-group
-      = search_field_tag :search, params[:search],
-        type: 'search',
-        class: 'form-control',
-        placeholder: "Search for a Cliq"
-      =button_tag '<i class="fa fa-search"></i>'.html_safe, class: 'btn btn-default', name: nil
+=simple_form_for @cliq,
+  url: cliq_path(@cliq),
+  method: :get,
+  class: "navbar-form navbar-left"  do |f|
+  .input-group
+    =f.search_field :search,
+      type: "search",
+      class: "form-control",
+      placeholder: "Search for a Cliq!"
+    %span.input-group-btn
+      = button_tag(type: 'submit', class: "btn btn-search") do
+        %i.fa.fa-search
+-#%li
+-#  = form_tag cliq_path(@cliq), method:'get',class:'navbar-form navbar-left input-append' do
+-#    .form-group
+-#      = search_field_tag :search, params[:search],
+-#        type: 'search',
+-#        class: 'form-control',
+-#        placeholder: "Search for a Cliq"
+-#      =button_tag '<i class="fa fa-search"></i>'.html_safe,
+-#        class: 'btn btn-default',
+-#        type: 'submit',
+-#        name: nil
+
+
+-#<form class="navbar-form navbar-left" role="search">
+-#  <div class="form-group">
+-#    <input type="text" class="form-control" placeholder="Search">
+-#  </div>
+-#  <button type="submit" class="btn btn-default">Submit</button>
+-#</form>
