--- a/app/views/layouts/application/cliq_bar/_cliq_search.html.haml
+++ b/app/views/layouts/application/cliq_bar/_cliq_search.html.haml
@@ -1,14 +1,16 @@
-=simple_form_for @cliq,
-  url: cliq_path(@cliq),
+=simple_form_for :cliq,
+  url: new_cliq_path,
   method: :get,
   class: "navbar-form navbar-left"  do |f|
   .input-group
-    =f.search_field :search,
+    =f.search_field :name,
       type: "search",
       class: "form-control",
-      placeholder: "Search for a Cliq!"
+      placeholder: "Search for a Cliq!",
+      value: nil
+    =f.hidden_field :parent_id, :value => @cliq.id
     %span.input-group-btn
-      = button_tag(type: 'submit', class: "btn btn-search") do
+      =button_tag type:'submit', class: "btn btn-search", name: nil do
         %i.fa.fa-search
 -#%li
 -#  = form_tag cliq_path(@cliq), method:'get',class:'navbar-form navbar-left input-append' do
