--- a/app/views/shared/_cliq.html.haml
+++ b/app/views/shared/_cliq.html.haml
@@ -5,4 +5,4 @@
 .cliq
   =link_to cliq_path(cliq) do
     .cliq-color{style: "background-color: ##{bgcolor}"}
-    =cliq.name.capitalize
+    =cliq_name(cliq)
