--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -14,6 +14,10 @@ body {
     background-color: white;
 }
 
+.navbar-default {
+  background-color: #ffae00!important;
+}
+
 table {
   .subject {
     padding-left: 20px;
