--- a/app/views/layouts/application/cliq_bar/_cliq_brand.html.haml
+++ b/app/views/layouts/application/cliq_bar/_cliq_brand.html.haml
@@ -5,4 +5,6 @@
   %span.icon-bar
   %span.icon-bar
 %ul.nav.navbar-nav
-  %li=link_to 'Cliq', cliqs_path, class:'navbar-brand'
+  %li
+    =link_to cliqs_path, class:'navbar-brand' do
+      =image_tag "logo.png", size: "60x28"
