--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -15,7 +15,10 @@ body {
 }
 
 .navbar-default {
-  background-color: #ffae00!important;
+  background-color: #f29f05!important;
+  border-radius:0px!important;
+  border: none;
+  border-bottom: 1px solid #e7e7e7;
 }
 
 table {
