--- a/app/views/layouts/application/cliq_bar/_cliq_history.html.haml
+++ b/app/views/layouts/application/cliq_bar/_cliq_history.html.haml
@@ -2,7 +2,7 @@
   -unless desc == @top_cliq
     %li.dropdown
       %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-        =desc.name.capitalize
+        =desc.name
         %span.caret
       %ul.dropdown-menu{role:'menu'}
         =render "shared/cliq_info", cliq:desc
