--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -33,3 +33,13 @@ table {
       color: #4b4b4b;
     }
 }
+
+.navbar-toggle-show {
+  display:block!important;
+}
+
+.navbar-left-favorites {
+  margin-left: 10px;
+  margin-top: 65px;
+  background-color: transparent!important;
+}
