--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,14 +19,12 @@
     %link{href:"//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css", rel:"stylesheet"}
     = yield :head
     %body
-      = render "favorites/nav"
+      = render "favorites/nav" if current_user
       .cliq_bar
         #fb-root
         = render "layouts/application/cliq_bar"
       .container
-        .navbar.navbar-default.navmenu-fixed-left.navbar-left-favorites
-          %button.white.navbar-toggle.navbar-toggle-show{"data-canvas" => "body", "data-target" => ".navmenu", "data-toggle" => "offcanvas", :type => "button"}
-            %i.fa.fa-star
+        = render "favorites/navbar" if current_user
         .row
           .col-lg-12.col-md-12.col-sm-12
             = bootstrap_flash
