--- a/app/views/cliqs/cliq_body/_topic_list.html.haml
+++ b/app/views/cliqs/cliq_body/_topic_list.html.haml
@@ -1,4 +1,4 @@
-=render "shared/cliq_top"
+=render "shared/cliq_top", cliq:@cliq
 .pagination-container
   =paginate @topics
 %table.table.table-striped#topics
