oh shit..changed everything

--- a/app/views/cliqs/cliq_body/_stickies.html.haml
+++ b/app/views/cliqs/cliq_body/_stickies.html.haml
@@ -4,7 +4,7 @@
       -if sticky.locked?
         %i.fa.fa-lock
       %i.fa.fa-tag
-      =link_to sticky.subject, topic_path(sticky)
+      =link_to sticky.subject, cliq_topic_path(@cliq,sticky)
     %td
       =sticky.exp
     %td
