--- a/app/views/topics/_topic.html.haml
+++ b/app/views/topics/_topic.html.haml
@@ -2,7 +2,7 @@
   %td
     -if topic.locked?
       %i.fa.fa-lock
-    =link_to topic.subject, cliq_topic_path(@cliq, topic)
+    =link_to topic.subject, cliq_topic_path(topic.cliq, topic)
   %td
     =topic.exp
   %td
