changed ALL routes to friendly id

--- a/app/views/replies/_form.html.haml
+++ b/app/views/replies/_form.html.haml
@@ -1,4 +1,4 @@
-=simple_form_for [@topic, @reply] do |f|
+=simple_form_for [@topic.cliq, @topic, @reply] do |f|
   %div.field
     %br
     =f.label :body
