--- a/app/views/layouts/application/cliq_bar/_account.html.haml
+++ b/app/views/layouts/application/cliq_bar/_account.html.haml
@@ -7,7 +7,7 @@
         Create a Username
       %span.caret
     %ul.dropdown-menu{role:"menu"}
-      %li= link_to "Edit", edit_user_registration_path
+      %li= link_to "Profile", user_path(current_user)
       %li= link_to "Sign out", destroy_user_session_path
       - if can? :manage, @all
         %li= link_to "Admin", admin_path
