--- a/app/views/topics/_reply_bar.html.haml
+++ b/app/views/topics/_reply_bar.html.haml
@@ -1,3 +1,3 @@
 .well
   .text-right
-    =link_to "Reply", new_cliq_topic_path(@cliq,@topic)
+    =link_to "Reply", new_cliq_topic_reply_path(@cliq,@topic)
