--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -2,10 +2,11 @@
   %h2 Account settings
   = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => "form-horizontal", :role => "form" }) do |f|
     = devise_error_messages!
-    .form-group
-      = f.label :username, :class => "col-sm-2 control-label"
-      .col-sm-4
-        = f.text_field :username, :type => :username, :class => "form-control", :placeholder => "Enter your username"
+    -unless current_user.username?
+      .form-group
+        = f.label :username, :class => "col-sm-2 control-label"
+        .col-sm-4
+          = f.text_field :username, :type => :username, :class => "form-control", :placeholder => "Enter your username"
     -unless current_user.provider == 'facebook'
       -#.form-group
       -#  = f.label :email, :class => "col-sm-2 control-label"
