--- a/app/views/favorites/_nav.html.haml
+++ b/app/views/favorites/_nav.html.haml
@@ -1,6 +1,5 @@
 -if current_user
   .navmenu.navmenu-default.navmenu-fixed-left.offcanvas{:style => ""}
     %a.navmenu-brand{:href => "#"} Favorites
-    %ul.nav.navmenu-nav
-      -@favorites.each do |favorite|
-        =render "shared/cliq", cliq: favorite.cliq
+    #favorite-list
+      =render "favorites/favorite_list"
