--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -7,7 +7,13 @@
   */
 
 body {
-    background-color: #538d8b;
+    background-color: #f8f8f8;
+}
+.panel {
+  border-radius: 0px!important;
+}
+.navbar {
+  margin-bottom: 0px!important;
 }
 
 .table-striped > tbody > tr:nth-child(even) > td{
@@ -15,7 +21,7 @@ body {
 }
 
 .navbar-default {
-  background-color: #f29f05!important;
+  background-color: #fff!important;
   border-radius:0px!important;
   border: none;
   border-bottom: 1px solid #e7e7e7;
@@ -39,9 +45,12 @@ table {
 }
 
 .navbar-left-favorites {
-  margin-left: 10px;
-  margin-top: 65px;
+  margin-top: 85px;
   background-color: transparent!important;
+  button {
+    border-top-left-radius: 0!important;
+    border-bottom-left-radius: 0!important;
+  }
 }
 
 @media (max-width: 768px) {
