--- a/app/views/layouts/application/cliq_bar/_account.html.haml
+++ b/app/views/layouts/application/cliq_bar/_account.html.haml
@@ -11,7 +11,7 @@
       %li= link_to "Sign out", destroy_user_session_path
       - if can? :manage, @all
         %li= link_to "Admin", admin_path
-  %li= image_tag(facebook_image(current_user.uid))
+  %li= facebook_image(current_user.uid)
 -else
   %li= link_to "Sign up", new_user_registration_path
   %li= link_to "Sign in", new_user_session_path
