--- a/app/views/topics/_replies.html.haml
+++ b/app/views/topics/_replies.html.haml
@@ -1,12 +1,3 @@
 -@replies.each do |reply|
-  .well
-    .dropdown.pull-right
-      -if reply.user
-        ="by: #{reply.user.username}"
-      -else
-        ="by: User has been deleted"
-      =render "settings", topicreply:reply  if current_user
-    %br
-    =reply.body.html_safe
-
+  =render "topic_post", post:reply
 
