--- a/app/views/topics/show.html.haml
+++ b/app/views/topics/show.html.haml
@@ -1,7 +1,7 @@
-=render "reply_bar", topic:@topic
 .modal.fade#report-modal
-.well
-  =render "shared/cliq_top", cliq: @cliq if current_user
+.panel.topic-list
+  %h2.topics-subject
+    =@topic.subject
   -if @topic.active?
     =render "first_post"
     =render "replies"
