--- a/app/views/topics/_settings.html.haml
+++ b/app/views/topics/_settings.html.haml
@@ -7,15 +7,15 @@
       =link_to edit_cliq_topic_path(@cliq,@topic) do
         -font_awesome('pencil')
   -if topicreply.is_a?(Topic)
-    -if can? :update, topicreply
+    -if can? :admin, topicreply
       %li.admin-color
         =link_to cliq_topic_path(@cliq,topicreply, topic: {locked:!topicreply.locked}), method: :put, title: "un/lock" do
           -topicreply.locked ? font_awesome('lock') : font_awesome('unlock')
-    -if can? :update, topicreply
+    -if can? :admin, topicreply
       %li.admin-color
         =link_to cliq_topic_path(@cliq,topicreply, topic: {sticky:!topicreply.sticky}), method: :put, title: "un/sticky" do
           -topicreply.sticky ? font_awesome('tag') : font_awesome('thumb-tack')
-    -if can? :update, topicreply
+    -if can? :admin, topicreply
       %li.admin-color
         =link_to cliq_topic_path(@cliq,topicreply, topic: {opened:!topicreply.opened}), method: :put, title: "expand/collapse" do
           -topicreply.opened ? font_awesome('minus-square') : font_awesome('minus-square-o')
