--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -116,3 +116,19 @@ ul {
 .icon-active {
   color: lightblue!important;
 }
+
+.new {
+  color: #00b3ee;
+}
+
+.warm {
+  color: #850500;
+}
+
+.hot {
+  color: #d70000;
+}
+
+.hottest {
+  color: #ff5b00;
+}
