--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,8 @@
  *= require pagination
  *= require jasny-bootstrap
  *= require topics
-
+ *= require owl
+ *= require owl-carousel.css
 */
 
 .top48 {
@@ -114,7 +115,7 @@ ul {
 }
 
 .icon-active {
-  color: lightblue!important;
+  color: lightpink!important;
 }
 
 .new {
@@ -131,4 +132,13 @@ ul {
 
 .hottest {
   color: #ff5b00;
+}
+
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
