--- a/app/views/bookmarks/update.js.erb
+++ b/app/views/bookmarks/update.js.erb
@@ -1,4 +1,4 @@
-<% if @done %>
+<% if !@done %>
 $('<%= escape_javascript "a.#{@topic_id}-t-favorite".html_safe %>').find("i").addClass("icon-active");
 <% else %>
 $('<%= escape_javascript "a.#{@topic_id}-t-favorite".html_safe %>').find("i").removeClass("icon-active");
