--- a/app/assets/stylesheets/owl.scss
+++ b/app/assets/stylesheets/owl.scss
@@ -1,28 +1,36 @@
 .recent-container-inner{
+  top: 1px;
   border-left: 1px solid #e7e7e7;
   margin: 0px 20px;
 }
 .recent-container-outer{
   position:relative;
   margin: 0 auto;
+
 }
 
 .item{
   padding: 5px 10px;
+  position:relative;
+  .item-border {
+    position:absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index:-1;
+    border-right: 1px solid #e7e7e7;
+  }
 }
 
 .recent-active {
   background-color: white;
-  border-bottom: 1px solid #fff;
+  border-bottom: 2px solid #fff;
   border-top: 1px solid #e7e7e7;
-  border-right: 1px solid #e7e7e7;
 }
 
 .recent-inactive {
   border-top: 1px solid #e7e7e7;
-  border-right: 1px solid #e7e7e7;
-  border-bottom: 1px solid #e7e7e7;
-
 }
 
 
@@ -53,4 +61,14 @@
   &:hover {
     background-color:#d3d3d3;
   }
+}
+
+.recent-bottom-border {
+  z-index: -2;
+  position : absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: #e7e7e7;
+  height: 1px;
 }
