--- a/app/views/layouts/application/cliq_bar/_cliq_carousel.html.haml
+++ b/app/views/layouts/application/cliq_bar/_cliq_carousel.html.haml
@@ -16,8 +16,8 @@
 
 :javascript
   $('.owl-carousel').owlCarousel({
-    autoWidth:true,
-    items:1
+    items:5,
+    autoWidth: true
   });
   var owl = $('.owl-carousel');
   $('.customNextBtn').click(function() {
