temporary fix for ugly js issue

--- a/app/views/layouts/application/cliq_bar/_cliq_carousel.html.haml
+++ b/app/views/layouts/application/cliq_bar/_cliq_carousel.html.haml
@@ -16,8 +16,7 @@
 
 :javascript
   $('.owl-carousel').owlCarousel({
-    items:5,
-    autoWidth: true
+    items:4
   });
   var owl = $('.owl-carousel');
   $('.customNextBtn').click(function() {
