--- a/app/views/cliqs/cliq_body/_filter_list.html.haml
+++ b/app/views/cliqs/cliq_body/_filter_list.html.haml
@@ -3,7 +3,7 @@
 -if can? :update, @cliq
   %li
     = link_to admin_cliq_path(@cliq) do
-      %i.fa.fa-user-secret
+      %i.fa.fa-user
 %li
   = link_to cliq_path(@cliq, :filter => "popular") do
     %i.fa.fa-thumbs-up
