--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -147,3 +147,20 @@ ul {
 .cliq-bar {
   padding-bottom: 25px;
 }
+
+.history-ul {
+  position: relative;
+}
+
+.history-text {
+  z-index: -1;
+  cursor: default;
+  font-family: Arial;
+  font-weight: bolder;
+  font-size: 28px;
+  position:absolute;
+  right: 50px;
+  top: -9px;
+  bottom: 0;
+  color: #e7e7e7;
+}
