--- a/app/views/cliqs/cliq_body/_cliq_carousel.html.haml
+++ b/app/views/cliqs/cliq_body/_cliq_carousel.html.haml
@@ -16,7 +16,7 @@
 
 :javascript
   $('.owl-carousel').owlCarousel({
-    autoWidth: true,
+    autoWidth: true
   });
   var owl = $('.owl-carousel');
   $('.customNextBtn').click(function() {
