--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
       -@title = @cliq.name
     -else
       -@title = "Welcome to Cliq"
-    %title= content_for?(:title) ? yield(:title) : "Cliq! - #{@title}"
+    %title= content_for?(:title) ? yield(:title) : "Cliq! - #{@title} - #{@topic.subject if @topic}"
     %meta{name:"google-site-verification", content:"dh0g5voQYpDDuZtt1i1KVaVJDBCw1wEEZ74R9djqWMQ"}
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
