--- a/app/views/topics/show.html.haml
+++ b/app/views/topics/show.html.haml
@@ -1,4 +1,9 @@
 .modal.fade#report-modal
+=render "cliqs/cliq_body/cliq_carousel"
+.history-list
+  .container
+    %ul.list-inline.align-top.pull-left.history-ul
+      =render "cliqs/cliq_body/cliq_history" if @cliq.present?
 .panel.topic-list
   %h2.topics-subject
     =@topic.subject
