--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
  *= require topics
  *= require owl
  *= require owl-carousel.css
+ *= require bootstrap-slider
 */
 
 .top48 {
@@ -163,4 +164,17 @@ ul {
   top: -9px;
   bottom: 0;
   color: #e7e7e7;
+}
+
+.pretty th .current {
+  padding-right: 12px;
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+.pretty th .asc {
+  background-image: url(up_arrow.gif);
+}
+
+.pretty th .desc {
+  background-image: url(down_arrow.gif);
 }
